--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -49,7 +49,8 @@
                 <div class="row form-group mb-0">
                     <div class=" offset-lg-4 offset-xl-4"></div>
                     <div class="input-group col-md-4">
-                        <a class="btn btn-block color-main" routerLink="/register">Registrarse</a>
+                        <a class="btn btn-block color-main" routerLink="/registerDoctor">Registrarse como doctor</a>
+                        <a class="btn btn-block color-main" routerLink="/registerPatient">Registrarse como paciente</a>
                     </div>
                 </div>
                 <div class="row form-group mb-0">
