--- a/src/app/doctor/components/doctor-principal/doctor-principal.component.html
+++ b/src/app/doctor/components/doctor-principal/doctor-principal.component.html
@@ -7,22 +7,25 @@
 
         <ul class="list-unstyled components">
             <li>
-                <a routerLink="/admin-principal/home">Home</a>
+                <a routerLink="/doctor-principal/home">Home</a>
             </li>
             <li>
-                <a routerLink="/admin-principal/patient-admin">Pacientes</a>
+                <a routerLink="/doctor-principal/patient-doctor">Pacientes</a>
             </li>
             <li>
-                <a routerLink="/admin-principal/doctor-admin">Doctores</a>
+                <a routerLink="/doctor-principal/agenda-doctor">Agenda</a>
             </li>
             <li>
-                <a routerLink="/admin-principal/entidades-admin">Entidades</a>
+                <a routerLink="/doctor-principal/citas-doctor">Citas</a>
             </li>
             <li>
-                <a routerLink="/admin-principal/products-admin">Productos</a>
+                <a routerLink="/doctor-principal/reportes-doctor">Reportes</a>
             </li>
             <li>
-                <a routerLink="/admin-principal/settings-admin">Configuración</a>
+                <a routerLink="/doctor-principal/facturacion-doctor">Facturación</a>
+            </li>
+            <li>
+                <a routerLink="/doctor-principal/settings-doctor">Configuración</a>
             </li>
             <li>
                 <a routerLink="login">Salir</a>
