--- a/src/app/admin/components/doctor-admin/doctor-admin.component.html
+++ b/src/app/admin/components/doctor-admin/doctor-admin.component.html
@@ -4,7 +4,7 @@
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">Nombre</th>
-                <th scope="col">Telefono</th>
+                <th scope="col">Teléfono</th>
                 <th scope="col">Fecha de nacimiento</th>
                 <th scope="col">Número de identificación</th>
                 <th scope="col">Reputación</th>
@@ -32,7 +32,7 @@
 </div>
 <ng-template #contenido let-modal>
     <div class="modal-header">
-        <h4 class="modal-title">Editar paciente</h4>
+        <h4 class="modal-title">Editar Doctor</h4>
         <button class="close" aria-label="close" type="button" (click)="modal.dismiss()">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -41,25 +41,25 @@
         <form>
             <div class="form-row">
                 <div class="form-group col-md-4">
-                    <label for="inputFistName">First Name</label>
+                    <label for="inputFistName">Nombre</label>
                     <input type="text" class="form-control" id="inputFistName" name="inputFistName" [(ngModel)]="doctorModal.firstName" />
                 </div>
                 <div class="form-group col-md-4">
-                    <label for="inputLastName">Last Name</label>
+                    <label for="inputLastName">Primer Apellido</label>
                     <input type="text" class="form-control" id="inputLastName" name="inputLastName" [(ngModel)]="doctorModal.lastName" />
                 </div>
                 <div class="form-group col-md-4">
-                    <label for="inputLastName2">Last Name 2</label>
+                    <label for="inputLastName2">Segundo Apellido</label>
                     <input type="text" class="form-control" id="inputLastName2" name="inputLastName2" [(ngModel)]="doctorModal.lastName2" />
                 </div>
             </div>
             <div class="form-row">
                 <div class="form-group col-md-10">
-                    <label for="inputImageUrl">Url Image</label>
+                    <label for="inputImageUrl">Imagen perfil</label>
                     <input type="text" class="form-control" id="inputImageUrl" name="inputImageUrl" [(ngModel)]="doctorModal.image" />
                 </div>
                 <div class="form-group col-md-2">
-                    <label for="inputGender">Gender</label>
+                    <label for="inputGender">Género</label>
                     <select class="form-control" id="inputGender" name="inputGender" [(ngModel)]="doctorModal.gender">
             <option value="M">M</option>
             <option value="F">F</option>
@@ -67,30 +67,30 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="inputDescription">Description</label>
+                <label for="inputDescription">Descripción</label>
                 <input type="text" class="form-control" id="inputDescription" name="inputDescription" [(ngModel)]="doctorModal.description" />
             </div>
             <div class="form-row">
                 <div class="form-group col-md-6">
-                    <label for="inputPhone">Phone</label>
+                    <label for="inputPhone">Teléfono</label>
                     <input type="number" class="form-control" id="inputPhone" name="inputPhone" [(ngModel)]="doctorModal.phone" />
                 </div>
                 <div class="form-group col-md-6">
-                    <label for="inputBirthdate">Birthdate</label>
+                    <label for="inputBirthdate">Fecha de nacimiento</label>
                     <input type="date" class="form-control" id="inputBirthdate" name="inputBirthdate" [(ngModel)]="doctorModal.birthday" />
                 </div>
             </div>
             <div class="form-row">
                 <div class="form-group col-md-5">
-                    <label for="inputPrice">Price</label>
+                    <label for="inputPrice">Precio</label>
                     <input type="number" class="form-control" id="inputPrice" name="inputPrice" [(ngModel)]="doctorModal.price" />
                 </div>
                 <div class="form-group col-md-5">
-                    <label for="inputReputation">Reputation</label>
+                    <label for="inputReputation">Reputación</label>
                     <input type="number" class="form-control" id="inputReputation" name="inputReputation" [(ngModel)]="doctorModal.reputation" />
                 </div>
                 <div class="form-group col-md-2">
-                    <label for="inputVerified">Verified</label>
+                    <label for="inputVerified">Verificado</label>
                     <select class="form-control" id="inputVerified" name="inputVerified" [(ngModel)]="doctorModal.verified">
             <option value="Y">SI</option>
             <option value="N">NO</option>
