--- a/src/app/admin/components/patient-admin/patient-admin.component.html
+++ b/src/app/admin/components/patient-admin/patient-admin.component.html
@@ -13,22 +13,24 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let p of patients;let i = index">
-                <td>{{i+1}}</td>
-                <td>{{p.firstName +" " +p.lastName +" "+ p.lastName2}}</td>
-                <td>{{p.phone | phone}}</td>
-                <td>{{p.birthdate | date:'dd-MM-yyyy'}}</td>
-                <td>{{p.userId | number}}</td>
-                <td>{{p.ocupation}}</td>
-                <td>{{p.approved }}</td>
-                <td><button class="btn bg-main btn-editar" (click)="openCentrado(contenido, p)">
-                    <i class="fas fa-user-edit"></i>
-                  </button></td>
+            <tr *ngFor="let p of patients; let i = index">
+                <td>{{ i + 1 }}</td>
+                <td>{{ p.firstName + " " + p.lastName + " " + p.lastName2 }}</td>
+                <td>{{ p.phone | phone }}</td>
+                <td>{{ getFormattedDate(p.birthdate) | date }}</td>
+                <td>{{ p.userId | number }}</td>
+                <td>{{ p.ocupation }}</td>
+                <td>{{ p.approved }}</td>
+                <td>
+                    <button class="btn bg-main btn-editar" (click)="openCentrado(contenido, p)">
+            <i class="fas fa-user-edit"></i>
+          </button>
+                </td>
             </tr>
         </tbody>
     </table>
 </div>
-
+<!--
 <div class="container">
     <h2 class="text-center">{{ strTitle }}</h2>
     <div class="card-columns" *ngIf="patients">
@@ -45,6 +47,7 @@
         </div>
     </div>
 </div>
+-->
 <ng-template #contenido let-modal>
     <div class="modal-header">
         <h4 class="modal-title">Editar paciente</h4>
@@ -102,7 +105,7 @@
                 </div>
                 <div class="form-group col-md-6">
                     <label for="inputBirthdate">Fecha de nacimiento</label>
-                    <input type="date" class="form-control" id="inputBirthdate" name="inputBirthdate" [(ngModel)]="patModal.birthdate" />
+                    <input type="date" class="form-control" id="inputBirthdate" name="inputBirthdate" [(ngModel)]="fechaParseada" />
                 </div>
             </div>
             <div class="form-row">
@@ -122,7 +125,7 @@
           </select>
                 </div>
                 <div class="form-group col-md-2">
-                    <label for="inputVerified">Verificado   </label>
+                    <label for="inputVerified">Verificado </label>
                     <select class="form-control" id="inputVerified" name="inputVerified" [(ngModel)]="patModal.verified">
             <option value="Y">SI</option>
             <option value="N">NO</option>
