--- a/src/app/admin/components/patient-admin/patient-admin.component.html
+++ b/src/app/admin/components/patient-admin/patient-admin.component.html
@@ -1,53 +1,40 @@
 <div class="container">
-    <table class="table table-bordered text-center">
-        <thead class="thead-dark">
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Nombre</th>
-                <th scope="col">Teléfono</th>
-                <th scope="col">Fecha de nacimiento</th>
-                <th scope="col">Número de identificación</th>
-                <th scope="col">Ocupación</th>
-                <th scope="col">Aprobado</th>
-                <th scope="col">Editar</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let p of patients; let i = index">
-                <td>{{ i + 1 }}</td>
-                <td>{{ p.firstName + " " + p.lastName + " " + p.lastName2 }}</td>
-                <td>{{ p.phone | phone }}</td>
-                <td>{{ getFormattedDate(p.birthdate) | date }}</td>
-                <td>{{ p.userId | number }}</td>
-                <td>{{ p.ocupation }}</td>
-                <td>{{ p.approved }}</td>
-                <td>
-                    <button class="btn bg-main btn-editar" (click)="openCentrado(contenido, p)">
+    <h1 class="text-center">
+        {{strTitle}}
+    </h1>
+    <hr>
+    <button class="btn  bg-main mb-2 text-white" routerLink="formCustomer"> <i class="far fa-file"></i> Nuevo Paciente</button>
+    <div class="table-responsive">
+        <table class="table table-bordered text-center  table-hover">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Teléfono</th>
+                    <th scope="col">Fecha de nacimiento</th>
+                    <th scope="col">Número de identificación</th>
+                    <th scope="col">Editar</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let p of patients | paginate: { itemsPerPage: 5, currentPage: pageActual} ; let i = index">
+                    <td>{{ i + 1 }}</td>
+                    <td>{{ p.firstName + " " + p.lastName + " " + p.lastName2 }}</td>
+                    <td>{{ p.phone }}</td>
+                    <td>{{ getFormattedDate(p.birthdate) | date }}</td>
+                    <td>{{ p.userId | number }}</td>
+                    <td>
+                        <button class="btn bg-main btn-editar" (click)="openCentrado(contenido, p)">
             <i class="fas fa-user-edit"></i>
           </button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-<!--
-<div class="container">
-    <h2 class="text-center">{{ strTitle }}</h2>
-    <div class="card-columns" *ngIf="patients">
-        <div class="card" *ngFor="let p of patients">
-            <img [src]="p.image" alt="John" style="width: 100%" />
-            <h1>{{ p.firstName }} {{ p.lastName }} {{ p.lastName2 }}</h1>
-            <p class="title">{{ p.ocupation }}</p>
-            <p>{{ p.userId }}</p>
-            <p>
-                <button class="btn bg-main btn-editar" (click)="openCentrado(contenido, p)">
-                    Editar
-                  </button>
-            </p>
-        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <pagination-controls class="text-center " (pageChange)="pageActual=$event"></pagination-controls>
     </div>
 </div>
--->
+
 <ng-template #contenido let-modal>
     <div class="modal-header">
         <h4 class="modal-title">Editar paciente</h4>
