--- a/src/app/admin/components/patient-admin/patient-admin.component.html
+++ b/src/app/admin/components/patient-admin/patient-admin.component.html
@@ -1,4 +1,14 @@
 <div class="container">
+    <h1 class="text-center">{{strTitle}}</h1>
+    <div class="form-group row">
+        <button class="btn bg-main ml-3 text-white" (click)="findAll()"><i class="far fa-eye"></i>Mostrar todos</button>
+        <button class="btn btn-secondary ml-3 "><i class="fas fa-search"></i> Buscar</button>
+        <div class="col">
+            <input class="form-control" type="text" placeholder="Buscar por identificación">
+        </div>
+    </div>
+    <hr class="">
+    <button class="btn btn-secondary mb-2" routerLink="formCustomer"> <i class="far fa-file"></i>Nuevo paciente</button>
     <table class="table table-bordered text-center">
         <thead class="thead-dark">
             <tr>
@@ -7,47 +17,31 @@
                 <th scope="col">Teléfono</th>
                 <th scope="col">Fecha de nacimiento</th>
                 <th scope="col">Número de identificación</th>
-                <th scope="col">Ocupación</th>
-                <th scope="col">Aprobado</th>
                 <th scope="col">Editar</th>
+                <th scope="col">Inactivar</th>
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let p of patients; let i = index">
                 <td>{{ i + 1 }}</td>
                 <td>{{ p.firstName + " " + p.lastName + " " + p.lastName2 }}</td>
-                <td>{{ p.phone | phone }}</td>
+                <td>{{ p.phone }}</td>
                 <td>{{ getFormattedDate(p.birthdate) | date }}</td>
-                <td>{{ p.userId | number }}</td>
-                <td>{{ p.ocupation }}</td>
-                <td>{{ p.approved }}</td>
+                <td>{{ p.userId }}</td>
                 <td>
                     <button class="btn bg-main btn-editar" (click)="openCentrado(contenido, p)">
-            <i class="fas fa-user-edit"></i>
-          </button>
+                        <i class="fas fa-user-edit"></i>
+                    </button>
+                </td>
+                <td>
+                    <button class="btn btn-danger btn-editar">
+                        <i class="fas fa-user-slash"></i>
+                    </button>
                 </td>
             </tr>
         </tbody>
     </table>
 </div>
-<!--
-<div class="container">
-    <h2 class="text-center">{{ strTitle }}</h2>
-    <div class="card-columns" *ngIf="patients">
-        <div class="card" *ngFor="let p of patients">
-            <img [src]="p.image" alt="John" style="width: 100%" />
-            <h1>{{ p.firstName }} {{ p.lastName }} {{ p.lastName2 }}</h1>
-            <p class="title">{{ p.ocupation }}</p>
-            <p>{{ p.userId }}</p>
-            <p>
-                <button class="btn bg-main btn-editar" (click)="openCentrado(contenido, p)">
-                    Editar
-                  </button>
-            </p>
-        </div>
-    </div>
-</div>
--->
 <ng-template #contenido let-modal>
     <div class="modal-header">
         <h4 class="modal-title">Editar paciente</h4>
