Doctor,paciente,productos

--- a/src/app/admin/components/patient-admin/patient-admin.component.html
+++ b/src/app/admin/components/patient-admin/patient-admin.component.html
@@ -1,42 +1,52 @@
 <div class="container">
-    <h1 class="text-center">{{strTitle}}</h1>
+    <h1 class="text-center">{{ strTitle }}</h1>
     <div class="form-group row">
-        <button class="btn bg-main ml-3 text-white" (click)="findAll()"><i class="far fa-eye"></i>Mostrar todos</button>
-        <button class="btn btn-secondary ml-3 "><i class="fas fa-search"></i> Buscar</button>
+        <button class="btn bg-main ml-3 text-white" (click)="findAll()">
+      <i class="far fa-eye"></i>Mostrar todos
+    </button>
+        <button class="btn btn-secondary ml-3">
+      <i class="fas fa-search"></i> Buscar
+    </button>
         <div class="col">
-            <input class="form-control" type="text" placeholder="Buscar por identificación">
+            <input class="form-control" type="text" placeholder="Buscar por identificación" [(ngModel)]="identificacion" (keyup.enter)="findById(identificacion)" />
         </div>
     </div>
-    <hr class="">
-    <button class="btn btn-secondary mb-2" routerLink="formCustomer"> <i class="far fa-file"></i>Nuevo paciente</button>
+    <hr class="" />
     <table class="table table-bordered text-center">
         <thead class="thead-dark">
             <tr>
-                <th scope="col">#</th>
+                <th scope="col">Id</th>
                 <th scope="col">Nombre</th>
                 <th scope="col">Teléfono</th>
                 <th scope="col">Fecha de nacimiento</th>
                 <th scope="col">Número de identificación</th>
+                <th scope="col">Estado</th>
                 <th scope="col">Editar</th>
                 <th scope="col">Inactivar</th>
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let p of patients; let i = index">
-                <td>{{ i + 1 }}</td>
+                <td>{{ p.patientId }}</td>
                 <td>{{ p.firstName + " " + p.lastName + " " + p.lastName2 }}</td>
                 <td>{{ p.phone }}</td>
                 <td>{{ getFormattedDate(p.birthdate) | date }}</td>
                 <td>{{ p.userId }}</td>
+                <td>{{ p.state }}</td>
                 <td>
                     <button class="btn bg-main btn-editar" (click)="openCentrado(contenido, p)">
-                        <i class="fas fa-user-edit"></i>
-                    </button>
+            <i class="fas fa-user-edit"></i>
+          </button>
                 </td>
-                <td>
-                    <button class="btn btn-danger btn-editar">
-                        <i class="fas fa-user-slash"></i>
-                    </button>
+                <td *ngIf="p.state === 'A'">
+                    <button class="btn btn-danger btn-editar" (click)="inactivarP(p)">
+            <i class="fas fa-user-slash"></i>
+          </button>
+                </td>
+                <td *ngIf="p.state === 'I'">
+                    <button class="btn btn-success btn-editar" (click)="activarP(p)">
+            <i class="fas fa-user-slash"></i>
+          </button>
                 </td>
             </tr>
         </tbody>
