--- a/src/app/admin/components/doctor-admin/doctor-admin.component.html
+++ b/src/app/admin/components/doctor-admin/doctor-admin.component.html
@@ -1,14 +1,17 @@
 <div class="container">
-    <h1 class="text-center">{{strTitle}}</h1>
+    <h1 class="text-center">{{ strTitle }}</h1>
     <div class="form-group row">
-        <button class="btn bg-main ml-3 text-white" (click)="findAll()"><i class="far fa-eye"></i>Mostrar todos</button>
-        <button class="btn btn-secondary ml-3 " (click)="findById(identificacion)"><i class="fas fa-search" ></i> Buscar</button>
+        <button class="btn bg-main ml-3 text-white" (click)="findAll()">
+      <i class="far fa-eye"></i>Mostrar todos
+    </button>
+        <button class="btn btn-secondary ml-3" (click)="findById(identificacion)">
+      <i class="fas fa-search"></i> Buscar
+    </button>
         <div class="col">
-            <input class="form-control" type="text" placeholder="Buscar por identificación" [(ngModel)]="identificacion" (keyup.enter)="findById(identificacion)">
+            <input class="form-control" type="text" placeholder="Buscar por identificación" [(ngModel)]="identificacion" (keyup.enter)="findById(identificacion)" />
         </div>
     </div>
-    <hr class="">
-    <button class="btn btn-secondary mb-2" routerLink="formCustomer"> <i class="far fa-file"></i>Nuevo doctor</button>
+    <hr class="" />
     <table class="table table-bordered text-center">
         <thead class="thead-dark">
             <tr>
@@ -19,28 +22,35 @@
                 <th scope="col">Número de identificación</th>
                 <th scope="col">Reputación</th>
                 <th scope="col">Precio consulta</th>
+                <th scope="col">Estado</th>
                 <th scope="col">Editar</th>
-                <th scope="col">Inactivar</th>
+                <th scope="col">Activar/Inactivar</th>
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let d of doctors; let i = index">
-                <td>{{ i + 1 }}</td>
+                <td>{{ d.doctorId }}</td>
                 <td>{{ d.firstName + " " + d.lastName + " " + d.lastName2 }}</td>
                 <td>{{ d.phone }}</td>
                 <td>{{ getFormattedDate(d.birthday) | date }}</td>
                 <td>{{ d.userId }}</td>
                 <td>{{ d.reputation }} <i class="fas fa-star"></i></td>
                 <td>{{ d.price | currency: "COP " }}</td>
+                <td>{{ d.state }}</td>
                 <td>
                     <button class="btn bg-main btn-editar" (click)="openCentrado(contenido, d)">
             <i class="fas fa-user-edit"></i>
           </button>
                 </td>
-                <td>
-                    <button class="btn btn-danger btn-editar">
-                        <i class="fas fa-user-slash"></i>
-                    </button>
+                <td *ngIf="d.state === 'A'">
+                    <button class="btn btn-danger btn-editar" (click)="inactivarD(d)">
+            <i class="fas fa-user-slash"></i>
+          </button>
+                </td>
+                <td *ngIf="d.state === 'I'">
+                    <button class="btn btn-success btn-editar" (click)="activarD(d)">
+            <i class="fas fa-user-slash"></i>
+          </button>
                 </td>
             </tr>
         </tbody>
