Seguridad guards,admin entidades y revision de registro pacientes

--- a/src/app/admin/components/admin-principal/admin-principal.component.html
+++ b/src/app/admin/components/admin-principal/admin-principal.component.html
@@ -25,7 +25,7 @@
                 <a routerLink="/admin-principal/settings-admin">Configuración</a>
             </li>
             <li>
-                <a routerLink="login">Salir</a>
+                <a (click)=closeSession()>Salir</a>
             </li>
         </ul>
     </nav>
