--- a/src/app/doctor/components/doctor-principal/doctor-principal.component.html
+++ b/src/app/doctor/components/doctor-principal/doctor-principal.component.html
@@ -28,7 +28,7 @@
                 <a routerLink="/doctor-principal/settings-doctor">Configuración</a>
             </li>
             <li>
-                <a routerLink="login">Salir</a>
+                <a (click)=closeSession()>Salir</a>
             </li>
         </ul>
     </nav>
