--- a/src/app/admin/components/entidades-admin/entidades-admin.component.html
+++ b/src/app/admin/components/entidades-admin/entidades-admin.component.html
@@ -1,1 +1,75 @@
-<p>entidades-admin works!</p>
+<div class="container">
+    <h1 class="text-center">{{ strTitle }}</h1>
+    <div class="form-group row">
+        <button class="btn bg-main ml-3 text-white" (click)="findAll()">
+      <i class="far fa-eye"></i>Mostrar todos
+    </button>
+        <button class="btn btn-secondary ml-3" (click)="findById(id)">
+      <i class="fas fa-search"></i> Buscar
+    </button>
+        <div class="col">
+            <input class="form-control" type="text" placeholder="Buscar por entidad" [(ngModel)]="id" (keyup.enter)="findById(id)" />
+        </div>
+    </div>
+    <hr class="" />
+    <table class="table table-bordered text-center">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Nombre</th>
+                <th scope="col">Estado</th>
+                <th scope="col">Editar</th>
+                <th scope="col">Inactivar/Activar</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let e of eps| paginate: { itemsPerPage: 5, currentPage: pageActual} ; let i = index">
+                <td>{{i+1}}</td>
+                <td>{{e.epsName}}</td>
+                <td>{{e.state}}</td>
+                <td>
+                    <button class="btn bg-main btn-editar text-white" (click)="openCentrado(contenido, e)">
+            <i class="fas fa-user-edit"></i>
+          </button>
+                </td>
+                <td *ngIf="e.state === 'A'">
+                    <button class="btn btn-danger btn-editar" (click)="inactivarE(e)">
+            <i class="fas fa-user-slash"></i>
+          </button>
+                </td>
+                <td *ngIf="e.state === 'I'">
+                    <button class="btn btn-success btn-editar" (click)="activarE(e)">
+            <i class="fas fa-user-slash"></i>
+          </button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <pagination-controls class="text-center " (pageChange)="pageActual=$event"></pagination-controls>
+</div>
+<ng-template #contenido let-modal>
+    <div class="modal-header">
+        <h4 class="modal-title">Editar Eps</h4>
+        <button class="close" aria-label="close" type="button" (click)="modal.dismiss()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+    <div class="modal-body">
+        <form>
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label for="inputFistName">Nombre</label>
+                    <input type="text" class="form-control" id="inputFistName" name="inputFistName" [(ngModel)]="epsModal.epsName" />
+                </div>
+            </div>
+            <button type="submit" class="btn btn-block bg-main btn-editar text-white" (click)="editar()">
+        Editar
+      </button>
+        </form>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-danger btn-block" (click)="modal.close()">
+      Cancelar
+    </button>
+    </div>
+</ng-template>
