--- a/src/app/admin/components/patient-admin/patient-admin.component.html
+++ b/src/app/admin/components/patient-admin/patient-admin.component.html
@@ -4,7 +4,7 @@
         <button class="btn bg-main ml-3 text-white" (click)="findAll()">
       <i class="far fa-eye"></i>Mostrar todos
     </button>
-        <button class="btn btn-secondary ml-3">
+        <button class="btn btn-secondary ml-3" (click)="findById(identificacion)">
       <i class="fas fa-search"></i> Buscar
     </button>
         <div class="col">
@@ -22,11 +22,11 @@
                 <th scope="col">Número de identificación</th>
                 <th scope="col">Estado</th>
                 <th scope="col">Editar</th>
-                <th scope="col">Inactivar</th>
+                <th scope="col">Inactivar/Activar</th>
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let p of patients; let i = index">
+            <tr *ngFor="let p of patients | paginate: { itemsPerPage: 5, currentPage: pageActual} ; let i = index">
                 <td>{{ p.patientId }}</td>
                 <td>{{ p.firstName + " " + p.lastName + " " + p.lastName2 }}</td>
                 <td>{{ p.phone }}</td>
@@ -51,6 +51,8 @@
             </tr>
         </tbody>
     </table>
+    <pagination-controls class="text-center " (pageChange)="pageActual=$event"></pagination-controls>
+
 </div>
 <ng-template #contenido let-modal>
     <div class="modal-header">
