--- a/src/app/admin/components/products-admin/products-admin.component.html
+++ b/src/app/admin/components/products-admin/products-admin.component.html
@@ -4,11 +4,11 @@
         <button class="btn bg-main ml-3 text-white" (click)="findAll()">
       <i class="far fa-eye"></i>Mostrar todos
     </button>
-        <button class="btn btn-secondary ml-3">
+        <button class="btn btn-secondary ml-3" (click)="findById(id)">
       <i class="fas fa-search"></i> Buscar
     </button>
         <div class="col">
-            <input class="form-control" type="text" placeholder="Buscar por producto" />
+            <input class="form-control" type="text" placeholder="Buscar por producto" [(ngModel)]="id" (keyup.enter)="findById(id)" />
         </div>
     </div>
     <hr class="" />
@@ -87,7 +87,7 @@
                     <img [src]="patModal.image" alt="" class="img-fluid" />
                 </div>
             </div>
-            <button type="submit " class="btn btn-block bg-main btn-editar" (click)="editar()">
+            <button type="submit " class="btn btn-block bg-main btn-editar text-white" (click)="editar()">
         Editar
       </button>
         </form>
