--- a/src/app/patient/components/patient-principal/patient-principal.component.html
+++ b/src/app/patient/components/patient-principal/patient-principal.component.html
@@ -26,7 +26,7 @@
         <a routerLink="/patient-principal/chat">Chat</a>
             </li>
             <li>
-                <a routerLink="login">Salir</a>
+                <a (click)=closeSession()>Salir</a>
             </li>
         </ul>
     </nav>
