--- a/src/app/patient/components/servicios-medicos-patient/servicios-medicos-patient.component.html
+++ b/src/app/patient/components/servicios-medicos-patient/servicios-medicos-patient.component.html
@@ -1,1 +1,94 @@
-<p>servicios-medicos-patient works!</p>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <h3 class="mb-3">{{ strTitle }}</h3>
+            </div>
+            <div class="col-6 text-right">
+                <a class="btn btn-primary mb-3 mr-1" href="#carouselExampleIndicators2" role="button" data-slide="prev">
+                    <i class="fa fa-arrow-left"></i>
+                </a>
+                <a class="btn btn-primary mb-3" href="#carouselExampleIndicators2" role="button" data-slide="next">
+                    <i class="fa fa-arrow-right"></i>
+                </a>
+            </div>
+            <div class="col-12">
+                <div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="row">
+                                <div class="col-md-4 mb-3" *ngFor="let d of doctors; let i = index">
+                                    <div class="card" *ngIf="i < 3">
+                                        <img [src]="d.image" alt="John" style="width: 100%" />
+                                        <h1>
+                                            {{ d.firstName + " " + d.lastName }}
+                                        </h1>
+                                        <p class="title">{{ d.description }}</p>
+                                        <p>{{ d.price | currency: "COP " }}</p>
+                                        <p>
+                                            <button class="card_button bg-main" (click)="openCentrado(contenido, d)">
+                        Pedir cita
+                      </button>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item" *ngIf="division > 1">
+                            <div class="row">
+                                <div class="col-md-4 mb-3" *ngFor="let d of doctors; let i = index">
+                                    <div class="card" *ngIf="i > 2">
+                                        <img [src]="d.image" alt="John" style="width: 100%" />
+                                        <h1>
+                                            {{ d.firstName + " " + d.lastName }}
+                                        </h1>
+                                        <p class="title">{{ d.description }}</p>
+                                        <p>{{ d.price | currency: "COP " }}</p>
+                                        <p>
+                                            <button class="card_button bg-main" (click)="openCentrado(contenido, d)">
+                        Pedir cita
+                      </button>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<ng-template #contenido let-modal>
+    <div class="modal-header">
+        <h4 class="modal-title">Pedir cita</h4>
+        <button class="close" aria-label="close" type="button" (click)="modal.dismiss()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+    <div class="modal-body">
+        <form>
+            <div class="form-group">
+                <label for="inputDescription">Descripción</label>
+                <input type="text" class="form-control" id="inputDescription" name="inputDescription" [(ngModel)]="citaModal.description" />
+            </div>
+            <div class="form-group">
+                <label for="inputMotivo">Motivo</label>
+                <input type="text" class="form-control" id="inputMotivo" name="inputMotivo" [(ngModel)]="citaModal.reason" />
+            </div>
+            <div class="form-group">
+                <label for="inputFecha">Fecha</label>
+                <input type="datetime-local" class="form-control" id="inputFecha" name="inputFecha" [(ngModel)]="citaModal.date" />
+            </div>
+            <button class="btn bg-main text-color-main btn-block" (click)="guardarCita()">
+        Pedir cita
+      </button>
+        </form>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-danger btn-block" (click)="modal.close()">
+      Cancelar
+    </button>
+    </div>
+</ng-template>
