--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 * {
-    font-family: 'Kanit', sans-serif;
+    font-family: "Kanit", sans-serif;
     /* background-image: url(assets/fondo.jpg); */
 }
 
@@ -21,9 +21,13 @@ footer {
 }
 
 .bg-main {
-    background-color: #7386D5;
+    background-color: #7386d5;
 }
 
 .color-main {
     color: #6d7fcc;
+}
+
+.text-color-main {
+    color: white;
 }
