--- a/src/app/admin/components/admin-principal/admin-principal.component.html
+++ b/src/app/admin/components/admin-principal/admin-principal.component.html
@@ -63,6 +63,9 @@
                         <li class="nav-item">
                             <a class="nav-link" routerLink="/admin-principal/settings-admin">Configuración</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" (click)=closeSession()>Salir</a>
+                        </li>
                     </ul>
                 </div>
             </div>
