--- a/src/app/patient/components/patient-principal/patient-principal.component.html
+++ b/src/app/patient/components/patient-principal/patient-principal.component.html
@@ -16,14 +16,16 @@
                 <a routerLink="/patient-principal/citas">Citas</a>
             </li>
             <li>
+                <a routerLink="/patient-principal/chat">Chat</a>
+            </li>
+            <li>
                 <a routerLink="/patient-principal/products">Productos</a>
             </li>
             <li>
-                <a routerLink="/patient-principal/servicios-medicos">Servicios Médicos</a
-        >
-      </li>
-      <li>
-        <a routerLink="/patient-principal/chat">Chat</a>
+                <a routerLink="/patient-principal/perfil">Perfil</a>
+            </li>
+            <li>
+                <a routerLink="/patient-principal/servicios-medicos">Servicios Médicos</a>
             </li>
             <li>
                 <a (click)=closeSession()>Salir</a>
@@ -47,16 +49,28 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Page</a>
+                            <a class="nav-link" routerLink="/patient-principal/home">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Page</a>
+                            <a class="nav-link" routerLink="/patient-principal/agenda">Agenda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Page</a>
+                            <a class="nav-link" routerLink="/patient-principal/citas">Citas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Page</a>
+                            <a class="nav-link" routerLink="/patient-principal/chat">Chat</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" routerLink="/patient-principal/products">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" routerLink="/patient-principal/perfil">Perfil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" routerLink="/patient-principal/servicios-medicos">Servicios Médicos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" (click)=closeSession()>Salir</a>
                         </li>
                     </ul>
                 </div>
